# IWinDEModifier

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  NOTE.md  README.md  imgui.ini
scripts/: batch_test.py  regace.cpp  regkey.cpp
scripts/cli/: CMakeLists.txt  cli.cpp
scripts/cli/entry/: UserChoice.cpp  flush.cpp  regkey.cpp  shell.cpp
scripts/regkey/: __init__.py  item.py
src/: CMakeLists.txt  app.cpp  backend.cpp  backend.h  widgets.cpp  widgets.h
src/DesktopTab/: CMakeLists.txt  handler.cpp
src/Ethereality/: CMakeLists.txt  PrivateMsg.hpp  PrivateMsgFactory.hpp  PrivateOnlyHub.hpp  chathub.h  client.cpp  msgitem.h  tcp_client.cpp  tcp_server.cpp  win32_dx11_example.cpp
src/Ethereality/GroupOnlyHub/: GroupMsg.cpp  GroupMsg.h  GroupMsgFactory.cpp  GroupMsgFactory.h  GroupOnlyHub.cpp  GroupOnlyHub.h  client.cpp  server.cpp  tcpclient.cpp  tcpserver.cpp  tcpserver.h  tcptel.cpp
src/Ethereality/PrivateOnlyHub/: PrivateMsg.cpp  PrivateMsg.h  PrivateMsgFactory.cpp  PrivateMsgFactory.h  PrivateOnlyHub.cpp  PrivateOnlyHub.h  client.cpp
src/IWinDEModifier/: CMakeLists.txt  app.cpp  widgets.cpp  widgets.h
src/LazyCraft/: CMakeLists.txt  lazycraft.cpp  lazycraft.h  lc_com.cpp  main.cpp
src/LazyCraft/com/: com_interface.h  statusbar.cpp  statusbar.h
src/LazyCraft/trap/: CMakeLists.txt  hook.c
src/LazyCraft/widget/: batteryitem.cpp  batteryitem.h  dateitem.cpp  dateitem.h
src/iwdesh/: CMakeLists.txt  iwdesh.cpp  iwdesh.h
src/iwdesh/entry/: regkey.cpp  shell.cpp
src/iwindeapi/: CMakeLists.txt  acl.cpp  acl.h  internal.h  registry.cpp  registry.h  shfolder.cpp  shfolder.h  userchoice.cpp  userchoice.h
src/share/: CMakeLists.txt
src/share/ui/: CMakeLists.txt  backend.cpp  backend.h
src/share/utils/: CMakeLists.txt  texture.cpp  texture.h
src/share/utils/proxy/: fontproxy.cpp  fontproxy.h  linkproxy.cpp  linkproxy.h  volumeproxy.h
src/share/utils/share/: CMakeLists.txt  tinyico.c
src/share/utils/tinyico/: CMakeLists.txt  tinyico.h
utils/: CMakeLists.txt
utils/DesktopTab/: handler.cpp
utils/LazyCraft/: CMakeLists.txt  README.md  lazycraft.cpp  lazycraft.h  lc_com.cpp  lc_main.cpp  lc_utils.cpp  main.cpp  tinyico.h
utils/LazyCraft/com/: com_interface.h  status_bar.cpp  status_bar.h  statusbar.cpp
utils/LazyCraft/trap/: hook.c
utils/LazyCraft/utils/: texture.h
utils/LazyCraft/utils/proxy/: fontproxy.h  linkproxy.cpp  linkproxy.h  volumeproxy.cpp
utils/LazyCraft/widget/: dateitem.h
utils/iwdesh/: CMakeLists.txt  iwdesh.cpp
utils/iwdesh/entry/: UserChoice.cpp  flush.cpp  regkey.cpp  shell.cpp
utils/share/: CMakeLists.txt  backend.cpp  backend.h
utils/share/imgui/: imgui_impl_win32.cpp
